# morningstar

./: .env.example  .gitignore  CLAUDE.md  HANDOVER.md  LICENSE  README.md  agent-prompt.md  agent-runner.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: morningstar-scheduled-dryrun.yml  morningstar-scheduled.yml  publish.yml
agents/: morningstar-runner.md
docs/: ARCHITECTURE.md  USER_GUIDE.md
skills/dry-run/: SKILL.md
skills/run/: SKILL.md
skills/status/: SKILL.md
skills/version/: SKILL.md
skills/watch/: SKILL.md
src/morningstar/: cli.py  engine.py
tests/: test_process_queue.py  test_slack.py  test_status.py
